# Todolist-project

./: CMakeLists.txt  README.md
include/: FileManager.h  PersonalTask.h  Task.h  TaskManager.h  UI.h  WorkTask.h
src/: FileManager.cpp  PersonalTask.cpp  Task.cpp  TaskManager.cpp  UI.cpp  WorkTask.cpp  main.cpp
